<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:binding="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.android.playandroid.viewmodel.LoginViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="170dp"
            android:layout_height="44dp"
            android:layout_marginTop="110dp"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintHorizontal_bias="0.543"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.android.playandroid.view.CustomEditText
            android:id="@+id/et_userName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_60"
            android:layout_marginTop="@dimen/dp_202"
            android:background="@color/white"
            android:cursorVisible="true"
            android:hint="@string/user_name_hint"
            android:paddingLeft="@dimen/dp_15"
            android:textColor="@android:color/black"
            android:textColorHint="@color/color_BFBFBF"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/sp_16"
            app:clearButtonMode="never"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/v_line1"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="@dimen/dp_262"
            android:background="@color/color_DBDBDB"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.android.playandroid.view.CustomEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_60"
            android:layout_marginTop="@dimen/dp_263"
            android:background="@color/white"
            android:cursorVisible="true"
            android:hint="@string/pwd_hint"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/dp_15"
            android:textColor="@android:color/black"
            android:textColorHint="@color/color_BFBFBF"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/sp_16"
            app:clearButtonMode="never"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:useLookPwdDrawable="true" />

        <View
            android:id="@+id/v_line2"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="@dimen/dp_323"
            android:background="@color/color_DBDBDB"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_344"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            binding:layout_editor_absoluteX="19dp"
            binding:layout_editor_absoluteY="481dp">

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/agree"
                android:textColor="@color/color_808080"
                android:textSize="@dimen/sp_14"
                app:theme="@style/checkBox1" />

            <TextView
                android:id="@+id/tv_service_agree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_network"
                android:textColor="@color/color_0172C2"
                android:textSize="@dimen/sp_14" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_43"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginTop="395dp"
            android:layout_marginRight="@dimen/dp_15"
            android:background="@color/button_bkg"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="@dimen/button_font"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_43"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginTop="448dp"
            android:layout_marginRight="@dimen/dp_15"
            android:background="@drawable/button_style"
            android:text="@string/register"
            android:textColor="@color/button_bkg"
            android:textSize="@dimen/button_font"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_run"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="538dp"
            android:text="@string/run_a_run"
            android:textColor="@color/color_808080"
            android:textSize="@dimen/tv_font"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.218" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
